--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
       <label for="name">Name:</label>
       <input type="text" id="name" name="name"><br><br>
       
-      <label for="year">Year:</label>
+      <label for="year">Graduation year:</label>
       <input type="number" id="year" name="year"><br><br>
       
       <input type="button" id="button" value="Submit" onclick="updateURL()">
