--- a/main.html
+++ b/main.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
+    
+     <h3 id="url">https://localhost:8080/</h3>
     <form>
       <label for="name">Name:</label>
       <input type="text" id="name" name="name"><br><br>
@@ -11,7 +13,7 @@
       <input type="button" id="button" value="Submit" onclick="updateURL()">
     </form>
     
-    <h3 id="url">https://localhost:8080/</h3>
+<!--     <h3 id="url">https://localhost:8080/</h3> -->
 
 
 
